@@ -24,7 +24,6 @@ package org.jboss.as.clustering.jgroups.subsystem;
 
 import static org.jboss.as.clustering.jgroups.subsystem.MulticastProtocolResourceDefinition.Attribute.SOCKET_BINDING;
 
-import java.util.Collections;
 import java.util.Map;
 
 import org.jboss.as.clustering.controller.CommonUnaryRequirement;
@@ -65,12 +64,14 @@ public class MulticastSocketProtocolConfigurationServiceConfigurator extends Pro
 
     @Override
     public Map<String, SocketBinding> getSocketBindings() {
-        return Collections.singletonMap("jgroups.mping.mcast_sock", this.binding.get());
+        SocketBinding binding = this.binding.get();
+        return Map.of("jgroups.mping.mcast_sock", binding, "jgroups.mping.mcast-send-sock", binding);
     }
 
     @Override
     public void accept(MPING protocol) {
         SocketBinding binding = this.binding.get();
+        protocol.setBindAddr(binding.getAddress());
         protocol.setMcastAddr(binding.getMulticastAddress());
         protocol.setMcastPort(binding.getMulticastPort());
     }
