@@ -24,16 +24,10 @@ package org.wildfly.clustering.marshalling.jboss;
 
 import java.io.IOException;
 import java.lang.reflect.Modifier;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.EnumSet;
 import java.util.IdentityHashMap;
-import java.util.LinkedList;
 import java.util.List;
 import java.util.ListIterator;
 import java.util.Map;
-import java.util.ServiceLoader;
-import java.util.Set;
 
 import org.jboss.marshalling.Marshaller;
 import org.jboss.marshalling.ObjectTable;
@@ -41,7 +35,6 @@ import org.jboss.marshalling.Unmarshaller;
 import org.wildfly.clustering.marshalling.Externalizer;
 import org.wildfly.clustering.marshalling.spi.IndexSerializer;
 import org.wildfly.clustering.marshalling.spi.IntSerializer;
-import org.wildfly.clustering.marshalling.spi.DefaultExternalizer;
 
 /**
  * {@link ObjectTable} implementation that dynamically loads {@link Externalizer} instances available from a given {@link ClassLoader}.
@@ -49,39 +42,23 @@ import org.wildfly.clustering.marshalling.spi.DefaultExternalizer;
  */
 public class ExternalizerObjectTable implements ObjectTable {
 
-    private final List<Externalizer<Object>> externalizers;
+    private final List<Externalizer<?>> externalizers;
     private final Map<Class<?>, Integer> indexes = new IdentityHashMap<>();
     private final IntSerializer indexSerializer;
 
-    public ExternalizerObjectTable(ClassLoader loader) {
-        this(loadExternalizers(loader));
-    }
-
-    private static List<Externalizer<Object>> loadExternalizers(ClassLoader loader) {
-        List<Externalizer<Object>> loadedExternalizers = new LinkedList<>();
-        for (Externalizer<Object> externalizer : ServiceLoader.load(Externalizer.class, loader)) {
-            loadedExternalizers.add(externalizer);
-        }
-        Set<DefaultExternalizer> defaultExternalizers = EnumSet.allOf(DefaultExternalizer.class);
-        List<Externalizer<Object>> result = new ArrayList<>(defaultExternalizers.size() + loadedExternalizers.size());
-        result.addAll(defaultExternalizers);
-        result.addAll(loadedExternalizers);
-        return result;
-    }
-
-    public ExternalizerObjectTable(List<Externalizer<Object>> externalizers) {
+    public ExternalizerObjectTable(List<Externalizer<?>> externalizers) {
         this(IndexSerializer.select(externalizers.size()), externalizers);
     }
 
     @SafeVarargs
-    public ExternalizerObjectTable(Externalizer<Object>... externalizers) {
-        this(Arrays.asList(externalizers));
+    public ExternalizerObjectTable(Externalizer<?>... externalizers) {
+        this(List.of(externalizers));
     }
 
-    private ExternalizerObjectTable(IntSerializer indexSerializer, List<Externalizer<Object>> externalizers) {
+    private ExternalizerObjectTable(IntSerializer indexSerializer, List<Externalizer<?>> externalizers) {
         this.indexSerializer = indexSerializer;
         this.externalizers = externalizers;
-        ListIterator<Externalizer<Object>> iterator = externalizers.listIterator();
+        ListIterator<Externalizer<?>> iterator = externalizers.listIterator();
         while (iterator.hasNext()) {
             this.indexes.putIfAbsent(iterator.next().getTargetClass(), iterator.previousIndex());
         }
@@ -114,10 +91,11 @@ public class ExternalizerObjectTable implements ObjectTable {
         private final IntSerializer serializer;
         private final Externalizer<Object> externalizer;
 
-        ExternalizerWriter(int index, IntSerializer serializer, Externalizer<Object> externalizer) {
+        @SuppressWarnings("unchecked")
+        ExternalizerWriter(int index, IntSerializer serializer, Externalizer<?> externalizer) {
             this.index = index;
             this.serializer = serializer;
-            this.externalizer = externalizer;
+            this.externalizer = (Externalizer<Object>) externalizer;
         }
 
         @Override
